updated a few things

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -12,5 +12,5 @@
 </style>
 
 <a href="/">
-  <img alt="Blog Logo" src="/assets/logo.webp" width="75" height="50" />
+  <img alt="UrsSur Logo" src="/assets/bear25.webp" width="50" />
 </a>
