--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,33 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-const title = 'My Astro Blog';
-const description = 'The perfect starter for your perfect blog.';
+const title = "The UrsSur Extravaganza";
+const description = "A quick place to post my thoughts and ideas.";
 const permalink = Astro.site.href;
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink}>
   <div class="home-container">
     <div class="home-copy">
-      <h1>Welcome to your new Astro Blog</h1>
-      <p>Check out the docs on <a href="https://www.github.com/Charca/astro-blog-template" target="_blank" rel="noopener">GitHub</a> to get started.</p>
+      <h1>Welcome to UrsSur</h1>
+      <p>
+        The brainchild of Alexandru Apetrei—a fearless coder who sometimes
+        develops software just for fun! 🎮💻
+      </p>
+      <p>
+        Take a look at one of my old projects:
+        <a href="https://test.urssur.com" target="_blank" rel="noopener"
+          >Chestionare Auto</a
+        >. 🚗✨
+      </p>
+      <p>
+        It’s a cool, internationalized quiz featuring all the theory exam
+        questions for the Romanian driving license. Think of it as a precision
+        airstrike for your driving exam prep! 💥🎯
+      </p>
     </div>
 
-    <div class="hero-image-container">
+    <!-- <div class="hero-image-container">
       <picture>
         <source srcset="/assets/home-illustration.webp" media="(min-width: 600px)">
         <img class="hero-image" alt="Illustration of person reading a book" src="/assets/home-illustration-small.webp" width="550" height="466">
@@ -24,7 +38,7 @@ const permalink = Astro.site.href;
         from
         <a href="https://icons8.com/illustrations" target="_blank" rel="noopener">Ouch!</a>
       </p>
-    </div>
+    </div> -->
   </div>
 </BaseLayout>
 
@@ -64,7 +78,7 @@ const permalink = Astro.site.href;
   }
 
   .caption {
-    font-size: .8em;
+    font-size: 0.8em;
     font-style: italic;
     text-align: left;
   }
